Giriş Ekranı bitti. Yemekhaneler vb. yeni sayfalar bitti.

--- a/Yemekhane_otomasyon/Properties/Settings.settings
+++ b/Yemekhane_otomasyon/Properties/Settings.settings
@@ -10,5 +10,14 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=BARAYDA_AK;Initial Catalog=DBYemekhane;Integrated Security=True;TrustServerCertificate=True</Value>
     </Setting>
+    <Setting Name="KayitliAd" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="KayitliSifre" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="BeniHatirla" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
